--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@ var connectionOptions =  {
             "transports" : ["websocket"]
         };
 $(document).ready(function() {
-	const socket = io();
+	const socket = io.connect('http://' + document.domain + ':' + location.port);
     console.log(socket); 
 
 
