--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Chat Room</title>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.3.2/socket.io.js" crossorigin="anonymous"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.3.2/socket.io.js" crossorigin="anonymous"></script> -->
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
