--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@ var connectionOptions =  {
             
         };
 $(document).ready(function() {
-	const socket = io("https://chatroom-private.herokuapp.com/",connectionOptions);
+	const socket = io(connectionOptions);
     console.log(socket); 
 
 
