--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
 var connectionOptions =  {
             "force new connection" : true,
             "reconnectionAttempts": "Infinity", //avoid having user reconnect manually in order to prevent dead clients after a server restart
-            "timeout" : 10000 //before connect_error and connect_timeout are emitted.
-            
+            "timeout" : 10000, //before connect_error and connect_timeout are emitted.
+            "transports" : ["websocket"]
         };
 $(document).ready(function() {
 	const socket = io(connectionOptions);
