--- a/templates/signin.html
+++ b/templates/signin.html
@@ -9,13 +9,14 @@
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 </head>
 <body>
-<ul id="messages">
-</ul>
- 
-<input type="text" id="myMessage">
-<button id="sendbutton">Send</button>
-<br><br><br>
-
-
+First Name: <input type="text" id="firstname">
+<br>
+Last Name: <input type="text" id="lastname">
+<br>
+Username:  <input type="text" id="username">
+<br>
+Password: <input type="password" id="password">
+<br>
+<button id="signin">Sign in</button>
 </body>
 </html>
