--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,7 @@
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 </head>
 <body>
-<ul id="messages">
-</ul>
+<ul id="messages"></ul>
  
 <input type="text" id="myMessage">
 <button id="sendbutton">Send</button>
