--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,13 @@
-<html>
-<head>
-<title>Chat Room</title>
+{% extends "base.html" %}
 
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.3.2/socket.io.js" crossorigin="anonymous"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.0/socket.io.js" integrity="sha512-FPJNGVqbetcAGvuJTpWqVuaOim5C5pyV+JaiAOxtBgsOWy0aiOLM9k5Nh7ikpSzUoz2Tb9Ue6zYWICDr9zZ5+g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"></script>
-<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
-</head>
-<body>
+{% block title %}Login Page{% endblock %}
+
+{% block content %}
+
 <ul id="messages"></ul>
  
 <input type="text" id="myMessage">
 <button id="sendbutton">Send</button>
 <br><br><br>
-</body>
-</html>
+
+{% endblock %}
