--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,14 +1,11 @@
-<html>
-<head>
-<title>Chat Room</title>
+{% extends "base.html" %}
 
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.3.2/socket.io.js" crossorigin="anonymous"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.0/socket.io.js" integrity="sha512-FPJNGVqbetcAGvuJTpWqVuaOim5C5pyV+JaiAOxtBgsOWy0aiOLM9k5Nh7ikpSzUoz2Tb9Ue6zYWICDr9zZ5+g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"></script>
-<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
-</head>
-<body>
+{% block title %}register Page{% endblock %}
+
+{% block content %}
+
+<div class='card bg-dark text-white'>
+    <div class="form">
 First Name: <input type="text" id="firstname">
 <br>
 Last Name: <input type="text" id="lastname">
@@ -17,6 +14,6 @@ Username:  <input type="text" id="username">
 <br>
 Password: <input type="password" id="password">
 <br>
-<button id="signin">Sign in</button>
-</body>
-</html>
+<button class="btn btn-outline-success" id="signin">Sign in</button>
+</div></div>    
+{% endblock %}
